# openloco

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Makefile  README.md  code-style.rst  code_guidelines.rst  todo.md
cmake/Modules/: FindLLVM.cmake  coverage_build_type.cmake  testfile_runner.cmake  unit_test.cmake
doc/doxygen/: Doxyfile
doc/sphinx/: Makefile  make.bat
doc/sphinx/source/: index.rst
header/lang/: CMakeLists.txt  ast.h  driver.h  scanner.h
header/lang/ast/: common_elements.h
ide/msvc/: win.mk
ide/xcode/: apple.mk
include/lang/ast/: ast.h  ast_codegen.h  codegen.h  forward_ast.h  meta.h
include/lang/codegen/: code_generator.h  code_visitor.h
include/lang/driver/: driver.h  error.h
source/: CMakeLists.txt
source/lang/: CMakeLists.txt  olc.cc  programming-languages.rst  programming-model.rst  syntax.rst
source/lang/ast/: ast.h  forward_ast.h  meta.h  meta.rst
source/lang/codegen/: code_generator.cc  code_generator.h  code_visitor.h  environment.cc  environment.h
source/lang/driver/: driver.cc  driver.h  error.cc  error.h  file.cc  file.h
source/lang/grammar/: CMakeLists.txt  olcc.g4
source/test/: CMakeLists.txt
source/test/parser/: CMakeLists.txt  test_runner.cc
source/test/parser/13_data_types/133_derived_data_types/books/: 1_T12_2.0  1_T12_3.0  1_T12_4.0  2_E3_11.0  2_E3_13.0  2_E3_6.0  2_E3_9.0  3_Ch3_4_3.0
source/test/parser/13_data_types/133_derived_data_types/string/: sized.0  sized_initialized.0  string.0
source/test/parser/13_data_types/133_derived_data_types/struct/: enumerated_value_assignment.0  simple_elementary_initialized.0  simple_type_name_initialized.0  subrange.0
source/test/parser/1_common_elements/: single_comments.0
source/test/scanner/: abstract_ut.h
source/test/scanner/11_identifier/: identifier_ut.cc
source/test/scanner/12_constants/: CMakeLists.txt  binary_integer_ut.cc  double_byte_string_ut.cc  fixed_point_ut.cc  hex_integer_ut.cc  integer_ut.cc  octal_integer_ut.cc  single_byte_string_ut.cc
source/test/scanner/extra/: CMakeLists.txt  eof_ut.cc  eol_ut.cc  line_count_ut.cc  syntax_error_ut.cc
src/: CMakeLists.txt  conf.py  index.rst
src/lang/: CMakeLists.txt  driver.cc  scanner.ll
src/lang/ast/: ast.h  common.h  forward_ast.h  meta.h
src/lang/codegen/: code_generator.cc  codegen.rst
src/lang/driver/: driver.cc  driver.h  error.cc  error.h  file.cc  file.h
src/lang/parser/: 0.yy  11-13.yy  11.yy  12.yy  13.yy  14.yy  15.yy  16.yy  17.yy  2.yy  3.yy  parser.yy  postamble.yy  preamble.yy
src/lang/scanner/: scanner.h  scanner.ll
support/Makefiles/: build.mk  clean.mk  cov.mk  os.mk  test.mk
support/Makefiles/os/: apple.mk  win.mk
test/: CMakeLists.txt  main.cc
test/lang/: CMakeLists.txt  parser_play.cc  scanner_play.cc
test/lang/parser/: CMakeLists.txt  abstract_parser_ut.cc  test_runner.cc
test/lang/parser/13/: type_with_array.0  type_with_array_dim_2.0  type_with_elementary.0  type_with_enumerated.0  type_with_multiple_subtypes.0  type_with_struct.0
test/lang/parser/13_data_types/133_derived_data_types/books/: 1_T12_1.0  2_E3_12.0  2_E3_13.0  2_E3_7.0  2_E3_8.0  2_E3_9.0  3_Ch3_4_3.0
test/lang/parser/13_data_types/133_derived_data_types/string/: initialized.0  string_decl_wstring_value.1  wstring.0  wstring_decl_string_value.1
test/lang/parser/13_data_types/133_derived_data_types/struct/: array.0  array_special_init.0  empty.1  enumerated_definition.0  simple_elementary.0  simple_multiple.0  simple_type_name.0
test/lang/parser/1_common_elements/: nested_comments.1  nested_comments_line.1  newline_in_commenr.0  single_comments.0
test/lang/scanner/: CMakeLists.txt  abstract_ut.h  binary_integer_ut.cc  double_byte_string_ut.cc  eof_ut.cc  fixed_point_ut.cc  hex_integer_ut.cc  identifier_ut.cc  integer_ut.cc  octal_integer_ut.cc  single_byte_string_ut.cc
test/lang/scanner/11_identifier/: CMakeLists.txt  identifier_ut.cc
test/lang/scanner/12_constants/: binary_integer_ut.cc  double_byte_string_ut.cc  fixed_point_ut.cc  hex_integer_ut.cc  integer_ut.cc  octal_integer_ut.cc  single_byte_string_ut.cc
test/lang/scanner/constants/: CMakeLists.txt  binary_integer_ut.cc  double_byte_string_ut.cc  hex_integer_ut.cc  integer_ut.cc  octal_integer_ut.cc  single_byte_string_ut.cc
test/lang/scanner/extra/: CMakeLists.txt  eof_ut.cc  eol_ut.cc  line_count_ut.cc  syntax_error_ut.cc
